完善订阅更新及定时任务

--- a/V2rayU/Locales/en.lproj/Localizable.strings
+++ b/V2rayU/Locales/en.lproj/Localizable.strings
@@ -11,6 +11,10 @@
 "FollowSystem" = "Follow System";
 
 // MARK: - Base operations
+"Enable" = "Enable";
+"Minute" = "Minute";
+"Hour"   = "Hour";
+"Day"    = "Day";
 "Save" = "Save";
 "Confirm" = "Confirm";
 "Cancel" = "Cancel";
